dataset1235/2025-2/2318198438/users/323753343/executions/2601575092_354104495.log
== RUN (2025-08-28 01:26:15)
-- CODE: 
print(''Em '',YYYY, ''a UFAM completou'', YYYY - XXXX, ''anos de fundação.'')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
File "XXXX", line 1
    print(''Em '',YYYY, ''a UFAM completou'', YYYY - XXXX, ''anos de fundação.'')
          ^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
File "XXXX", line 1
    print(''Em '',YYYY, ''a UFAM completou'', YYYY - XXXX, ''anos de fundação.'')
          ^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
File "XXXX", line 1
    print(''Em '',YYYY, ''a UFAM completou'', YYYY - XXXX, ''anos de fundação.'')
          ^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
File "XXXX", line 1
    print(''Em '',YYYY, ''a UFAM completou'', YYYY - XXXX, ''anos de fundação.'')
          ^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
File "XXXX", line 1
    print(''Em '',YYYY, ''a UFAM completou'', YYYY - XXXX, ''anos de fundação.'')
          ^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 01:25:59)
-- CODE: 
print(''Em '',YYYY, ''a UFAM completou'', YYYY - XXXX, ''anos de fundação.´´))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
File "XXXX", line 1
    print(''Em '',YYYY, ''a UFAM completou'', YYYY - XXXX, ''anos de fundação.´´))
                                                                              ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
File "XXXX", line 1
    print(''Em '',YYYY, ''a UFAM completou'', YYYY - XXXX, ''anos de fundação.´´))
                                                                              ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
File "XXXX", line 1
    print(''Em '',YYYY, ''a UFAM completou'', YYYY - XXXX, ''anos de fundação.´´))
                                                                              ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
File "XXXX", line 1
    print(''Em '',YYYY, ''a UFAM completou'', YYYY - XXXX, ''anos de fundação.´´))
                                                                              ^
SyntaxError: invalid character '´' (U+00B4)
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
File "XXXX", line 1
    print(''Em '',YYYY, ''a UFAM completou'', YYYY - XXXX, ''anos de fundação.´´))
                                                                              ^
SyntaxError: invalid character '´' (U+00B4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 01:31:12)
-- CODE: 

YYYY = int(input())
XXXX = 1909
print("Em", YYYY, "a UFAM completou", YYYY - XXXX, "anos de fundação.")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
---- user output:
Em 2020 a UFAM completou 111 anos de fundação.
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
---- user output:
Em 2024 a UFAM completou 115 anos de fundação.
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
---- user output:
Em 1959 a UFAM completou 50 anos de fundação.
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
---- user output:
Em 1985 a UFAM completou 76 anos de fundação.
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
---- user output:
Em 2009 a UFAM completou 100 anos de fundação.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 01:28:06)
-- CODE: 
print("Em", YYYY, "a UFAM completou", YYYY - XXXX, "anos de fundação.")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print("Em", YYYY, "a UFAM completou", YYYY - XXXX, "anos de fundação.")
                ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print("Em", YYYY, "a UFAM completou", YYYY - XXXX, "anos de fundação.")
                ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print("Em", YYYY, "a UFAM completou", YYYY - XXXX, "anos de fundação.")
                ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print("Em", YYYY, "a UFAM completou", YYYY - XXXX, "anos de fundação.")
                ^^^^
NameError: name 'YYYY' is not defined
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print("Em", YYYY, "a UFAM completou", YYYY - XXXX, "anos de fundação.")
                ^^^^
NameError: name 'YYYY' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 01:31:30)
-- CODE: 

YYYY = int(input())
XXXX = 1909
print("Em", YYYY, "a UFAM completou", YYYY - XXXX, "anos de fundação.")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
---- user output:
Em 2020 a UFAM completou 111 anos de fundação.
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
---- user output:
Em 2024 a UFAM completou 115 anos de fundação.
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
---- user output:
Em 1959 a UFAM completou 50 anos de fundação.
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
---- user output:
Em 1985 a UFAM completou 76 anos de fundação.
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
---- user output:
Em 2009 a UFAM completou 100 anos de fundação.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 01:26:18)
-- CODE: 
print(''Em '',YYYY, ''a UFAM completou'', YYYY - XXXX, ''anos de fundação.'')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2020
---- correct output:
Em 2020 a UFAM completou 111 anos de fundação.
-- ERROR:
File "XXXX", line 1
    print(''Em '',YYYY, ''a UFAM completou'', YYYY - XXXX, ''anos de fundação.'')
          ^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
2024
---- correct output:
Em 2024 a UFAM completou 115 anos de fundação.
-- ERROR:
File "XXXX", line 1
    print(''Em '',YYYY, ''a UFAM completou'', YYYY - XXXX, ''anos de fundação.'')
          ^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
1959
---- correct output:
Em 1959 a UFAM completou 50 anos de fundação.
-- ERROR:
File "XXXX", line 1
    print(''Em '',YYYY, ''a UFAM completou'', YYYY - XXXX, ''anos de fundação.'')
          ^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
1985
---- correct output:
Em 1985 a UFAM completou 76 anos de fundação.
-- ERROR:
File "XXXX", line 1
    print(''Em '',YYYY, ''a UFAM completou'', YYYY - XXXX, ''anos de fundação.'')
          ^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
2009
---- correct output:
Em 2009 a UFAM completou 100 anos de fundação.
-- ERROR:
File "XXXX", line 1
    print(''Em '',YYYY, ''a UFAM completou'', YYYY - XXXX, ''anos de fundação.'')
          ^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
